--- a/patientview-parent/patientview/src/main/resources/Messages.properties
+++ b/patientview-parent/patientview/src/main/resources/Messages.properties
@@ -40,11 +40,11 @@ description.required=Please supply a description
 heading.required=Please supply a heading
 name.required=Please supply a name
 username.required=Please supply a username
-unitcode.required=Please select a Renal Unit
+unitcode.required=Please select a unit
 nhsno.required=Please supply an NHS Number
 nhsno.mask=NHS number must be 10 numbers, with no spaces. It may contain uppercase letters for dummy or test patients.
 nhsno.checksum=NHS number must be valid.
-role.required=Please select a user type
+role.required=Please select a role
 
 url.valid=The url must be valid
 email.valid=The email must be valid
