--- a/patientview-parent/patientview/src/main/resources/Messages.properties
+++ b/patientview-parent/patientview/src/main/resources/Messages.properties
@@ -51,6 +51,7 @@ email.valid=The email must be valid
 
 cautionary.letters=Letters are only shown where they can be retrieved from your unit's computer system.  This is not always possible, or it may not have been activated for your unit.  It is important to note that letters may be shown here before they have been finally approved and had mistakes corrected.  This mainly applies if you are reading letters soon (e.g. within a week) after they have been typed.  If you have any concerns you should discuss it at your next clinic appointment, or contact the author of the letter.
 cautionary.medicines=This is a list of medicines as recorded on your renal unit's computer system.  IMPORTANT - the list of medicines shown here may not be complete or accurate, because  (1) Some renal units do not keep full records of medicines for all patients.  (2) Any changes made outside the renal unit - for example any new changes made, or new medicines prescribed by your GP or someone else, will not be shown here.  Please point out changes when you next attend a clinic appointment, or send a note or message to your renal unit.
+cautionary.medicines.diabetes=This is a list of your GP prescriptions for the past 12 months. If it does not reflect what you are actually taking or using please tell your practice and any other people you see for your diabetes.
 cautionary.alllinks=The information links shown here are selected and maintained by a multiprofessional group, the RIXG Information Review Panel.  With very few exceptions, the information is not written by us, only selected by us.  The principles the group uses to select information are shown <a href="http://www.renal.org/rixg/infolinks.html" target="_blank">here</a>.
 
 diagnostics.intro=<p>The Diagnostics section lists your previous imaging and endoscopy tests direct from the hospital record.  Please note only the date and type of test is recorded. The full report is not available. If you have any further questions about your tests please contact us by clicking here.  (Hyperlink to email about your condition)</p> <p?
@@ -59,7 +60,6 @@ diagnostics.intro=<p>The Diagnostics section lists your previous imaging and end
 education.intro=Having reliable and accurate information helps provide a platform to take control of your illness and improve your quality of life. Below is a list of helpful websites for trusted information.
 
 link.medicines=This link to <a href="http://www.nlm.nih.gov/medlineplus/druginformation.html" target="_blank">Medline Plus</a> is quite good if you want more information on individual drugs, or on herbs and supplements.
-
 ukt.status.none=No status uploaded
 
 news.headline.required=Please enter a headline
